--- a/javascrit.html
+++ b/javascrit.html
@@ -9,6 +9,6 @@
     <input type="button" onclick="alert('jinwon')" value="jinwon"/>
 </body>
 <script>
-    
+    alert("hellow world");
 </script>
 </html>
