--- a/demo2.html
+++ b/demo2.html
@@ -7,7 +7,13 @@
 </head>
 <body>
     <script>
-        alert("coding every body");
+    var id = prompt('아이디를 입력해주세요.');
+    var password = prompt('비밀번호를 입력해주세요');
+    if (id == 'jinwon' && password === '1111') {
+        alert('로그인 하셨습니다'+id+'님 반갑습니다');
+    }else{
+        alert('아이디가 일치하지 않습니다');
+    }
     </script>
 </body>
 </html>
