--- a/javascrit.html
+++ b/javascrit.html
@@ -8,6 +8,7 @@
 <body>
     <input type="button" onclick="alert('jinwon')" value="jinwon"/>
 </body>
+<p>자바스크립트 기초연습</p>
 <script>
     console.log("hellow world");
     
