--- a/demo4.html
+++ b/demo4.html
@@ -10,7 +10,7 @@
     var i = 0;
     for (i= 0; i < 10; i++) {
         if (i == 5) {
-            break;
+            continue;
         }
         document.write('Hellow <br />');
     }
