--- a/demo5.html
+++ b/demo5.html
@@ -8,7 +8,11 @@
 <body>
     <script>
         function numbering(){
-            document.write(1);
+            var i = 0;
+            while (i < 10) {
+                document.write(i);
+                i += 1;
+            }
         }
         numbering();
     </script>
