--- a/demo5.html
+++ b/demo5.html
@@ -10,11 +10,17 @@
         function numbering(){
             var i = 0;
             while (i < 10) {
-                document.write(i);
+                document.write(i+"<br />");
                 i += 1;
             }
         }
-        numbering();
+        for (i = 0; i < 10; i++) {
+            // 함수는 재사용성이 좋다 
+            // 함수를 사용하는 여러곳에서 유지보수하기 용이하다
+            // 가독성
+            numbering();    
+
+        }
     </script>
 </body>
 </html>
