--- a/demo6.html
+++ b/demo6.html
@@ -7,14 +7,11 @@
 </head>
 <body>
     <script>
-        function get_member1(){
-            return 'jinwon';   
+        function get_member(arg){
+            return arg;
         }
-        function get_member2(){
-            return 'jihun';   
-        }
-        alert(get_member1());
-        alert(get_member2());
+        alert(get_member(1));
+        alert(get_member(2));
     </script>
 </body>
 </html>
