--- a/demo6.html
+++ b/demo6.html
@@ -7,11 +7,16 @@
 </head>
 <body>
     <script>
-        function get_member(arg){
+        /*function get_member(arg){
             return arg;
         }
         alert(get_member(1));
-        alert(get_member(2));
+        alert(get_member(2));*/
+        function get_member(arg1,arg2){
+            return arg1+arg2;
+        }
+        alert(get_member(10,20));
+        alert(get_member(20,30));
     </script>
 </body>
 </html>
