--- a/demo6.html
+++ b/demo6.html
@@ -7,16 +7,31 @@
 </head>
 <body>
     <script>
-        /*function get_member(arg){
-            return arg;
+        /*numbering = function(){
+             i = 0;
+             while (i < 10) {
+                 document.write(i);
+                i+= 1;
+             }
         }
-        alert(get_member(1));
-        alert(get_member(2));*/
-        function get_member(arg1,arg2){
-            return arg1+arg2;
-        }
-        alert(get_member(10,20));
-        alert(get_member(20,30));
+        // 두개의 함수설정은 같다 다양한 방식을 보이기 위해서 
+        function numbering(){
+            i = 0;
+             while (i < 10) {
+                 document.write(i);
+                i+= 1;
+             }
+        }*/
+        // 익명함수 정의된 함수로 설정 --> 마지막에 () 괄호로 출력 !
+        (function (){
+            i = 0;
+            while (i < 5) {
+                document.write (i);
+                i += 1;
+
+            }
+        })();
+        numbering();
     </script>
 </body>
 </html>
