--- a/demo7.html
+++ b/demo7.html
@@ -8,7 +8,10 @@
 <body>
     <script>
         var member  = ['1','2','3'];
-        alert(member);
+        function get_member1(){
+            return '1';
+        }
+        document.write(get_member1());
     </script>
 </body>
 </html>
