--- a/demo7.html
+++ b/demo7.html
@@ -16,6 +16,11 @@
             document.write(member[i].toUpperCase()+'<br />');
 
         }
+        // 배열의 크기 length
+        // member.push('jinwon5') push는 배열안에 추가 한개의 배열일때!
+        // member.concat('jinwon5','jinwon6') push는 배열안에 추가 여러개의의 배열일때!
+        // member.unshift('jinwon0'); --> 배열의 시작지점에 추가 
+        // member.splice(1,0,jinwon5) jinwon과 jinwon2 사이에 jinwon5추가
         /*document.write(member[0].toUpperCase()+'<br />');
         document.write(member[1].toUpperCase()+'<br />');
         document.write(member[2].toUpperCase()+'<br />');*/
