--- a/demo8.html
+++ b/demo8.html
@@ -6,6 +6,11 @@
     <title>객체</title>
 </head>
 <body>
+    <ul>
+        <li>jiwon</li>
+        <li>jinwon2</li>
+        <li>jinwon3</li>
+    
     <script>
         var grades = {'jinwon':10,'jinwon2':20};
         var arr = ['a','b','c'];
@@ -14,5 +19,6 @@
 
         }      
     </script>
+    </ul>
 </body>
 </html>
