--- a/demo2.html
+++ b/demo2.html
@@ -7,8 +7,8 @@
 </head>
 <body>
     <script>
-    var id = prompt('아이디를 입력해주세요.');
-    var password = prompt('비밀번호를 입력해주세요');
+    let id = prompt('아이디를 입력해주세요.');
+    let password = prompt('비밀번호를 입력해주세요');
     if (id == 'jinwon' && password === '1111') {
         alert('로그인 하셨습니다'+id+'님 반갑습니다');
     }else{
