--- a/demo3.html
+++ b/demo3.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <script>
-        var i = 0;
+        let i = 0;
          while (i<10) {
             document.write ("집에가고싶다! "+i+"<br />");    
             i = i + 1;
