--- a/demo4.html
+++ b/demo4.html
@@ -7,9 +7,9 @@
 </head>
 <body>
     <script>
-    var i = 0;
+    let i = 0;
     for (i= 0; i < 10; i++) {
-        for (var j = 0; j < 5; j++) {
+        for (let j = 0; j < 5; j++) {
             document.write('Hellow'+i+j+'<br />');    
 
         }
