--- a/demo5.html
+++ b/demo5.html
@@ -8,7 +8,7 @@
 <body>
     <script>
         function numbering(){
-            var i = 0;
+            let i = 0;
             while (i < 10) {
                 document.write(i+"<br />");
                 i += 1;
