--- a/javascrit.html
+++ b/javascrit.html
@@ -4,13 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <script src="operator.js"></script>
+    
 </head>
 <body>
-    <input type="button" onclick="alert('jinwon')" value="jinwon"/>
+
 </body>
-<p>자바스크립트 기초연습</p>
-<script>
-    console.log("hellow world");
-    
-</script>
+
+
 </html>
